--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -1,3 +1,35 @@
 .rightpaddingfix {
     padding-right: 6px;
 }
+
+/* === Yeti === */
+.svgContainer {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto 1em;
+    border-radius: 50%;
+    background: none;
+    border: solid 2.5px #3A5E77;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+.svgContainer .yeti {
+    position: relative;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    padding-bottom: 100%;
+}
+
+.svgContainer .mySVG {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+/* === End Yeti === */
